--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,38 @@
-# Only exclude OS and IDE files
-.DS_Store
-*.swp
-*.swo
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
 
-# Zip files
+# Testing
+coverage/
+
+# Next.js
+.next/
+out/
+build/
+dist/
+
+# Production
+*.log
 *.zip
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+.env
+
+# Vercel
+.vercel
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
