--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cd pocket-ts && npm install && npm run build",
-  "installCommand": "cd pocket-ts && npm install",
+  "buildCommand": "test -d pocket-ts && (cd pocket-ts && npm install && npm run build) || (npm install && npm run build)",
+  "installCommand": "test -d pocket-ts && (cd pocket-ts && npm install) || npm install",
   "framework": "nextjs"
 }
 
